--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -48,17 +48,20 @@
 	<div class="container py-lg-5 py-4">
 		<div class="row contact-block">
 			<div class="col-md-6 contact-left pe-lg-5">
+
 				<h3 class="mb-sm-4 mb-3">Contact Info</h3>
+
 				<p class="cont-para mb-sm-5 mb-4">We enjoy discussing new projects and design challenges. Please
 					share as
 					much info, as possible so
 					we can get the most out of our first catch-up.</p>
+
 				<div class="cont-details">
 					<p><i class="fas fa-map-marker-alt"></i>10001, 5th Avenue, 12202 street, USA.</p>
 					<p><i class="fas fa-phone-alt"></i><a href="tel:+1(21) 234 4567">+1(21) 112 7368</a></p>
-					<p><i class="fas fa-envelope-open-text"></i><a href="mailto:example@mail.com"
-																   class="mail">example@mail.com</a></p>
+					<p><i class="fas fa-envelope-open-text"></i><a href="mailto:example@mail.com" class="mail">example@mail.com</a></p>
 				</div>
+
 				<h4 class="mb-3 mt-5">Follow Us</h4>
 				<ul class="social-icons-contact">
 					<li>
@@ -123,7 +126,6 @@
 			</div>
 			<!-- //Contact Form	-->
 
-
 		</div>
 	</div>
 </section>
@@ -186,6 +188,8 @@
 			}
 
 
+
+
 </script>
 <!-- //move top -->
 
@@ -207,6 +211,8 @@
 					for (i = 0, len = items.length; i < len; i++) {}
 				}
 			});
+
+
 
 
 </script>
@@ -244,6 +250,8 @@
 			});
 
 
+
+
 </script>
 <!-- //MENU-JS -->
 
@@ -254,6 +262,8 @@
 					$('body').toggleClass('noscroll');
 				})
 			});
+
+
 
 
 </script>
